name:          usb-safe-examples
version:       0.2.0.2
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2009 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
bug-reports:   https://github.com/basvandijk/usb-safe-examples/issues
stability:     experimental
category:      System, Monadic Regions
synopsis:      Examples that demonstrate how to use the usb-safe library

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/usb-safe-examples.git

Executable example
  main-is: example.hs
  GHC-Options: -Wall
  build-depends: base                 >= 4     && < 4.3
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , usb                  >= 0.5   && < 0.7
               , usb-safe             >= 0.11  && < 0.12
               , bytestring           >= 0.9   && < 0.10
               , transformers         >= 0.2   && < 0.3
