name:          usb-safe-examples
version:       0.2.0.2
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2009-2011 Bas van Dijk
author:        Bas van Dijk
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/usb-safe-examples/
bug-reports:   https://github.com/basvandijk/usb-safe-examples/issues
stability:     experimental
category:      System, Monadic Regions
synopsis:      Examples that demonstrate how to use the usb-safe library

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/usb-safe-examples.git

Executable example
  main-is: example.hs
  GHC-Options: -Wall -threaded -O2
  build-depends: base                 >= 4     && < 4.5
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , usb                  >= 1.0   && < 1.1
               , usb-safe             >= 0.14  && < 0.15
               , bytestring           >= 0.9   && < 0.10
               , transformers         >= 0.2   && < 0.3
